# robotnik_base_hw

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
config/: io_multipliers.yaml  robotnik_base_hw.yaml  robotnik_base_hw_limits.yaml  robotnik_battery_estimation_24V.yaml  robotnik_battery_estimation_48V.yaml
launch/: pid.launch  robotnik_base_hw.launch  sevcon_rosconsole.conf
lib/: robotnik_base_hw_lib.deb  ros-kinetic-robotnik-base-hw-lib_0.0.1-0xenial_amd64.deb  ros-kinetic-robotnik-base-hw-lib_0.9.10-0xenial_amd64.deb  ros-kinetic-robotnik-base-hw-lib_0.9.11-0xenial_amd64.deb  ros-kinetic-robotnik-base-hw-lib_0.9.12-0xenial_amd64.deb  ros-kinetic-robotnik-base-hw-lib_0.9.13-0xenial_amd64.deb  ros-kinetic-robotnik-base-hw-lib_0.9.14-0xenial_amd64.deb  ros-kinetic-robotnik-base-hw-lib_0.9.15-0xenial_amd64.deb  ros-kinetic-robotnik-base-hw-lib_0.9.16-0xenial_amd64.deb  ros-kinetic-robotnik-base-hw-lib_0.9.17-0xenial_amd64.deb  ros-kinetic-robotnik-base-hw-lib_0.9.3-0xenial_amd64.deb  ros-kinetic-robotnik-base-hw-lib_0.9.4-0xenial_amd64.deb  ros-kinetic-robotnik-base-hw-lib_0.9.5-0xenial_amd64.deb  ros-kinetic-robotnik-base-hw-lib_0.9.6-0xenial_amd64.deb  ros-kinetic-robotnik-base-hw-lib_0.9.7-0xenial_amd64.deb  ros-kinetic-robotnik-base-hw-lib_0.9.8-0xenial_amd64.deb  ros-kinetic-robotnik-base-hw-lib_0.9.9-0xenial_amd64.deb  ros-kinetic-robotnik-base-hw-lib_1.0.0-0xenial_amd64.deb  ros-melodic-robotnik-base-hw-lib_1.0.0-0bionic_amd64.deb  ros-melodic-robotnik-base-hw-lib_1.0.1-0bionic_amd64.deb  ros-melodic-robotnik-base-hw-lib_2.2.3-0bionic_amd64.deb
(+4 files in other folders)
