<?xml version="1.0"?>
<package>
  <name>robotnik_base_hw</name>
  <version>1.0.0</version>
  <description>The robotnik_base_hw package</description>

  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>
  <maintainer email="mbosch@robotnik.es">Marc Bosch</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>robotnik_base_hw_lib</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>robotnik_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>joint_limits_interface</build_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>robotnik_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>joint_limits_interface</run_depend>

  <export>
  </export>
</package>
